[package]
name = "highscore-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-cors = "0.6.1"  # Ensure this is the latest version
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
